# NibLang

./: CMakeLists.txt  LICENSE  README.md
compiler/: CMakeLists.txt  assembler.cc  assembler.h  bytecode_generator.cc  bytecode_generator.h  error_collector.cc  error_collector.h  file.h  golden_tests.cc  gtest_helpers.h  json_parser.nib  json_parser.txt  logging.cc  logging.h  main.cc  mock_error_collector.h  parser.cc  parser.h  parser_test.cc  printer.cc  printer.h  program_builder.cc  program_builder.h  scope_manager.cc  scope_manager.h  scope_manager_test.cc  semantic_analyzer.cc  semantic_analyzer.h  semantic_analyzer_test.cc  tokenizer.cc  tokenizer.h  type_checker.cc  type_checker.h  type_context.cc  type_context.h  type_context_test.cc  type_registry.cc  type_registry.h  type_registry_test.cc  type_resolver.cc  (+6 more)
compiler/std/: json.nib  sort.nib  types.nib
meta/: create_coverage.sh
src/: CMakeLists.txt  README.md  array.c  array.h  main.c  map.c  map.h  op.h  prog_types.h  promise.c  promise.h  strings.c  strings.h  types.h  vm.c  vm.h
test/: CMakeLists.txt  assembler.cc  assmbler.h  gtest_helpers.h  json_parser.cc  main.cc  map.cc  map_test.cc  promise.cc  promise_test.cc  vm.cc  vm_test.cc
test/ir/: CMakeLists.txt  example.txt  json_parser.txt  main.cc  tokenizer.cc  tokenizer.h
